Roomroot 12.4.1 : small changes